@@ -2102,6 +2102,13 @@ intent.
 Ignoring this warning will only suppress the lint check, it will simulate
 correctly.
 
+=item MODDUP
+
+Error that a module has multiple definitions.  Generally this indicates a
+coding error, or a mistake in a library file and it's good practice to have
+one module per file to avoid these issues.  For some gate level netlists
+duplicates are unavoidable, and this error may be disabled.
+
 =item MULTIDRIVEN
 
 Warns that the specified signal comes from multiple always blocks.  This is
